--- a/src/components/ItemCard.module.css
+++ b/src/components/ItemCard.module.css
@@ -12,8 +12,8 @@
 }
 .closeIcon{
   @apply absolute text-white bg-red-400 hover:bg-red-600 transition-all right-[-.5rem] top-[-.5rem]  w-6 h-6 flex justify-center items-center
-   pb-1 rounded-full opacity-0
+   pb-1 rounded-full opacity-0 invisible
 }
 .cardItem:hover .closeIcon{
-  @apply opacity-100
+  @apply opacity-100 visible
 }
